Fixes version lab L8